// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toast > renders with actions correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" class="" data-pohon="toaster-viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li role="alert" aria-live="off" aria-atomic="true" tabindex="0" data-orientation="vertical" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right" data-akar-collection-item="">
      <!--v-if-->
      <div class="">
        <div class="">Toast</div>
        <!--v-if-->
        <div class=""><button type="button" data-akar-toast-announce-exclude="" data-akar-toast-announce-alt="Action" class="" data-pohon="button-base">
            <!--v-if--><span class="" data-pohon="button-label">Action</span>
            <!--v-if-->
          </button></div>
      </div>
      <div class="">
        <!--v-if--><button type="button" aria-label="Close" data-akar-toast-announce-exclude="" class="" data-pohon="button-base"><span class="iconify i-lucide:x" aria-hidden="true" data-pohon="button-leading-icon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" class="" data-pohon="progress-root">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" class="" data-pohon="progress-indicator" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with as correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" class="" data-pohon="toaster-viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <section role="alert" aria-live="off" aria-atomic="true" tabindex="0" data-orientation="vertical" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right" data-akar-collection-item="">
      <!--v-if-->
      <div class="">
        <div class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="">
        <!--v-if--><button type="button" aria-label="Close" data-akar-toast-announce-exclude="" class="" data-pohon="button-base"><span class="iconify i-lucide:x" aria-hidden="true" data-pohon="button-leading-icon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" class="" data-pohon="progress-root">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" class="" data-pohon="progress-indicator" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </section>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with avatar correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" class="" data-pohon="toaster-viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li role="alert" aria-live="off" aria-atomic="true" tabindex="0" data-orientation="vertical" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right" data-akar-collection-item=""><span data-pohon="avatar-root"><img src="https://github.com/benjamincanac.png" width="32" height="32" data-pohon="avatar-image"></span>
      <div class="">
        <div class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="">
        <!--v-if--><button type="button" aria-label="Close" data-akar-toast-announce-exclude="" class="" data-pohon="button-base"><span class="iconify i-lucide:x" aria-hidden="true" data-pohon="button-leading-icon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" class="" data-pohon="progress-root">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" class="" data-pohon="progress-indicator" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with class correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" class="" data-pohon="toaster-viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li role="alert" aria-live="off" aria-atomic="true" tabindex="0" data-orientation="vertical" class="bg-elevated/50" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right" data-akar-collection-item="">
      <!--v-if-->
      <div class="">
        <div class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="">
        <!--v-if--><button type="button" aria-label="Close" data-akar-toast-announce-exclude="" class="" data-pohon="button-base"><span class="iconify i-lucide:x" aria-hidden="true" data-pohon="button-leading-icon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" class="" data-pohon="progress-root">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" class="" data-pohon="progress-indicator" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with close slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" class="" data-pohon="toaster-viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li role="alert" aria-live="off" aria-atomic="true" tabindex="0" data-orientation="vertical" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right" data-akar-collection-item="">
      <!--v-if-->
      <div class="">
        <div class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="">
        <!--v-if-->Close slot
      </div>
      <div data-orientation="horizontal" class="" data-pohon="progress-root">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" class="" data-pohon="progress-indicator" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with closeIcon correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" class="" data-pohon="toaster-viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li role="alert" aria-live="off" aria-atomic="true" tabindex="0" data-orientation="vertical" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right" data-akar-collection-item="">
      <!--v-if-->
      <div class="">
        <div class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="">
        <!--v-if--><button type="button" aria-label="Close" data-akar-toast-announce-exclude="" class="" data-pohon="button-base"><span class="iconify i-lucide:trash" aria-hidden="true" data-pohon="button-leading-icon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" class="" data-pohon="progress-root">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" class="" data-pohon="progress-indicator" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with color neutral correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" class="" data-pohon="toaster-viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li role="alert" aria-live="off" aria-atomic="true" tabindex="0" data-orientation="vertical" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right" data-akar-collection-item="">
      <!--v-if-->
      <div class="">
        <div class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="">
        <!--v-if--><button type="button" aria-label="Close" data-akar-toast-announce-exclude="" class="" data-pohon="button-base"><span class="iconify i-lucide:x" aria-hidden="true" data-pohon="button-leading-icon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" class="" data-pohon="progress-root">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" class="" data-pohon="progress-indicator" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with description correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" class="" data-pohon="toaster-viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li role="alert" aria-live="off" aria-atomic="true" tabindex="0" data-orientation="vertical" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right" data-akar-collection-item="">
      <!--v-if-->
      <div class="">
        <div class="">Toast</div>
        <div class="">This is a toast</div>
        <!--v-if-->
      </div>
      <div class="">
        <!--v-if--><button type="button" aria-label="Close" data-akar-toast-announce-exclude="" class="" data-pohon="button-base"><span class="iconify i-lucide:x" aria-hidden="true" data-pohon="button-leading-icon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" class="" data-pohon="progress-root">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" class="" data-pohon="progress-indicator" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with description slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" class="" data-pohon="toaster-viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li role="alert" aria-live="off" aria-atomic="true" tabindex="0" data-orientation="vertical" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right" data-akar-collection-item="">
      <!--v-if-->
      <div class="">
        <div class="">Toast</div>
        <div class="">Description slot</div>
        <!--v-if-->
      </div>
      <div class="">
        <!--v-if--><button type="button" aria-label="Close" data-akar-toast-announce-exclude="" class="" data-pohon="button-base"><span class="iconify i-lucide:x" aria-hidden="true" data-pohon="button-leading-icon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" class="" data-pohon="progress-root">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" class="" data-pohon="progress-indicator" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with icon correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" class="" data-pohon="toaster-viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li role="alert" aria-live="off" aria-atomic="true" tabindex="0" data-orientation="vertical" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right" data-akar-collection-item=""><span class="iconify i-lucide:rocket" aria-hidden="true"></span>
      <div class="">
        <div class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="">
        <!--v-if--><button type="button" aria-label="Close" data-akar-toast-announce-exclude="" class="" data-pohon="button-base"><span class="iconify i-lucide:x" aria-hidden="true" data-pohon="button-leading-icon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" class="" data-pohon="progress-root">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" class="" data-pohon="progress-indicator" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with leading slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" class="" data-pohon="toaster-viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li role="alert" aria-live="off" aria-atomic="true" tabindex="0" data-orientation="vertical" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right" data-akar-collection-item="">Leading slot<div class="">
        <div class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="">
        <!--v-if--><button type="button" aria-label="Close" data-akar-toast-announce-exclude="" class="" data-pohon="button-base"><span class="iconify i-lucide:x" aria-hidden="true" data-pohon="button-leading-icon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" class="" data-pohon="progress-root">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" class="" data-pohon="progress-indicator" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with orientation horizontal correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" class="" data-pohon="toaster-viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li role="alert" aria-live="off" aria-atomic="true" tabindex="0" data-orientation="horizontal" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right" data-akar-collection-item=""><span class="iconify i-lucide:rocket" aria-hidden="true"></span>
      <div class="">
        <div class="">Toast</div>
        <div class="">This is a toast</div>
        <!--v-if-->
      </div>
      <div class=""><button type="button" data-akar-toast-announce-exclude="" data-akar-toast-announce-alt="Action" class="" data-pohon="button-base">
          <!--v-if--><span class="" data-pohon="button-label">Action</span>
          <!--v-if-->
        </button><button type="button" aria-label="Close" data-akar-toast-announce-exclude="" class="" data-pohon="button-base"><span class="iconify i-lucide:x" aria-hidden="true" data-pohon="button-leading-icon"></span>
          <!--v-if-->
          <!--v-if-->
        </button></div>
      <div data-orientation="horizontal" class="" data-pohon="progress-root">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" class="" data-pohon="progress-indicator" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with orientation vertical correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" class="" data-pohon="toaster-viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li role="alert" aria-live="off" aria-atomic="true" tabindex="0" data-orientation="vertical" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right" data-akar-collection-item=""><span class="iconify i-lucide:rocket" aria-hidden="true"></span>
      <div class="">
        <div class="">Toast</div>
        <div class="">This is a toast</div>
        <div class=""><button type="button" data-akar-toast-announce-exclude="" data-akar-toast-announce-alt="Action" class="" data-pohon="button-base">
            <!--v-if--><span class="" data-pohon="button-label">Action</span>
            <!--v-if-->
          </button></div>
      </div>
      <div class="">
        <!--v-if--><button type="button" aria-label="Close" data-akar-toast-announce-exclude="" class="" data-pohon="button-base"><span class="iconify i-lucide:x" aria-hidden="true" data-pohon="button-leading-icon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" class="" data-pohon="progress-root">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" class="" data-pohon="progress-indicator" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with title correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" class="" data-pohon="toaster-viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li role="alert" aria-live="off" aria-atomic="true" tabindex="0" data-orientation="vertical" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right" data-akar-collection-item="">
      <!--v-if-->
      <div class="">
        <div class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="">
        <!--v-if--><button type="button" aria-label="Close" data-akar-toast-announce-exclude="" class="" data-pohon="button-base"><span class="iconify i-lucide:x" aria-hidden="true" data-pohon="button-leading-icon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" class="" data-pohon="progress-root">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" class="" data-pohon="progress-indicator" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with title slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" class="" data-pohon="toaster-viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li role="alert" aria-live="off" aria-atomic="true" tabindex="0" data-orientation="vertical" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right" data-akar-collection-item="">
      <!--v-if-->
      <div class="">
        <div class="">Title slot</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="">
        <!--v-if--><button type="button" aria-label="Close" data-akar-toast-announce-exclude="" class="" data-pohon="button-base"><span class="iconify i-lucide:x" aria-hidden="true" data-pohon="button-leading-icon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" class="" data-pohon="progress-root">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" class="" data-pohon="progress-indicator" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with type correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" class="" data-pohon="toaster-viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li role="alert" aria-live="off" aria-atomic="true" tabindex="0" data-orientation="vertical" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right" data-akar-collection-item="">
      <!--v-if-->
      <div class="">
        <div class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="">
        <!--v-if--><button type="button" aria-label="Close" data-akar-toast-announce-exclude="" class="" data-pohon="button-base"><span class="iconify i-lucide:x" aria-hidden="true" data-pohon="button-leading-icon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" class="" data-pohon="progress-root">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" class="" data-pohon="progress-indicator" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with ui correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" class="" data-pohon="toaster-viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li role="alert" aria-live="off" aria-atomic="true" tabindex="0" data-orientation="vertical" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right" data-akar-collection-item="">
      <!--v-if-->
      <div class="">
        <div class="font-bold">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="">
        <!--v-if--><button type="button" aria-label="Close" data-akar-toast-announce-exclude="" class="" data-pohon="button-base"><span class="iconify i-lucide:x" aria-hidden="true" data-pohon="button-leading-icon"></span>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" class="" data-pohon="progress-root">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" class="" data-pohon="progress-indicator" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders without close correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" class="" data-pohon="toaster-viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li role="alert" aria-live="off" aria-atomic="true" tabindex="0" data-orientation="vertical" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right" data-akar-collection-item="">
      <!--v-if-->
      <div class="">
        <div class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-orientation="horizontal" class="" data-pohon="progress-root">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" class="" data-pohon="progress-indicator" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;
